2008-05-31  Christian Persch <chpe@gnome.org>

	* src/totem-preferences.c: (totem_setup_preferences): Use the right
	handler for the delete-event signal. Bug #535952.

2008-05-31  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemNPObject.cpp:
	* browser-plugin/totemNarrowSpacePlugin.cpp:
	Fix a warning, and a build failure with debugging disabled

2008-05-30  Christian Persch <chpe@gnome.org>

	* configure.in:
	* Makefile.am:
	* browser-plugin/*: Decomtaminate the plugins. Bug #520629.

2008-05-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-sidebar.c (totem_sidebar_toggle): Remove unused, and
	unneeded GConf setting for "sidebar_shown", spotted by azurief on IRC

2008-05-28  Bastien Nocera  <hadess@hadess.net>

	* configure.in: patch from Richard Hult to fix compilation when X11
	headers are available but aren't the target windowing system (such as
	a MacOS X native build) (Closes: #535151)

2008-05-28  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Remove sticky gnome-vfs req

2008-05-27  Richard Hult  <richard@imendio.com>

	* configure.in: Add gconf-2.0 to pkg-config check for GTK+ only
	build. (Helps: #535151)

2008-05-27  Richard Hult  <richard@imendio.com>

	* configure.in: Quote ISO_CODES_PREFIX to fix build with
	--disable-iso-codes. (Closes: #535117)

2008-05-26  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add video/x-flv as a support mime-type

	* src/totem-menu.c (about_action_callback): Remove "GNOME" vs. "GTK+"
	backends

	* src/totem-video-indexer.c (main):
	* src/totem-video-thumbnailer.c (main):
	* src/totem.c (main): Remove calls to
	gnome_authentication_manager_init (), as we don't use gnome-vfs
	anymore (Closes: #534824)

2008-05-25  Claudio Saavedra  <csaavedra@gnome.org>

	* browser-plugin/totemPlugin.cpp: Remove include of
	<libgnomevfs/gnome-vfs-mime-utils.h> as GnomeVFS is
	no longer a dependency. Fixes build.

2008-05-25  Philip Withnall  <pwithnall@svn.gnome.org>
